Section List Layout Issue Fix

--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -7,7 +7,15 @@
     background-attachment: fixed;
     background-color: #010101;
 }
-#scroll-infinite {
+/*#scroll-infinite {
     overflow-y: auto;
     max-height: 580px;
+}*/
+
+.holder .places-plugin .bottom {
+    bottom: -200px !important;
+}
+
+.sectionSelected{
+    color:black;
 }
